--- a/content/pelican_rmarkdown_setup.Rmd
+++ b/content/pelican_rmarkdown_setup.Rmd
@@ -1,17 +1,18 @@
 ---
-title: Incorporating RMarkdown and Knitr in a Pelican Blog
+title: How to Write Pelican Blog Posts using RMarkdown & Knitr
 author: "Michael Toth"
 output: html_document
 category: R
 tags: R, Pelican, Blog
+summary: In this post I'm going to be talking about how to easily modify your Pelican blog configuration to let you directly publish blog posts using RMarkdown. 
 ---
 
-In this post I'm going to be talking about how to modify your Pelican blog configuration to easily let you directly publish blog posts using RMarkdown. I'm assuming you already have a Pelican blog set up, so I won't be covering that in today's post. If you're looking for further help on this, I recommend checking out these links:
+In this post I'm going to be talking about how to easily modify your Pelican blog configuration to let you directly publish blog posts using RMarkdown. I'm assuming you already have a Pelican blog set up, so I won't be covering that in today's post. If you're interested but haven't yet set up a blog for yourself, it's quite straightforward! I recommend checking out these links:
 
 * [Official Pelican Guide](http://docs.getpelican.com/en/stable/quickstart.html)
 * [Detailed Pelican Setup by Duncan Lock](http://duncanlock.net/blog/2013/05/17/how-i-built-this-website-using-pelican-part-1-setup/)
 
-Until now, I've been writing posts on this blog using standard markdown. This means I'd do any analysis in R, produce a series of graphs and results that I would store locally in image files, and put it all together on my own in a markdown document. It's not that bad, but I wanted to see if there was a better way. 
+Until now, I've been writing posts on this blog using standard markdown. This means I'd do an analysis in R, produce a series of graphs and results that I would store locally in image files, and put it all together on my own in a markdown document. It's not that bad a process, but it is a bit inefficient, and I wanted to see if there was a better way. Luckily, there's a very easy-to-use Pelican plugin called rmd_reader that will automatically convert any RMarkdown posts you have into Pelican-compliant html documents. In figuring out how to set this up, I drew heavily on these resources:
 
 * [rmd_reader Plugin on Github](https://github.com/getpelican/pelican-plugins/tree/master/rmd_reader)
 * [rmd_reader Setup Tutorial by Rebecca Weiss](https://rjweiss.github.io/articles/2014_08_25/testing-rmarkdown-integration/)
@@ -59,12 +60,42 @@ RMD_READER_RENAME_PLOT = 'directory'
 RMD_READER_KNITR_OPTS_CHUNK = {'fig.path': 'figure/'}
 ```
 <br>
+
 ### Testing & Examples
 
-Finally, we're ready to test out our new setup. Try this out with your own .Rmd document or use this one, [available on my Github](www.google.com), if you're just looking for a quick test.
+Finally, we're ready to test out our new setup. Try this out with your own .Rmd document or use this one, [available on my Github](https://raw.githubusercontent.com/michaeltoth/michaeltoth/master/content/pelican_rmarkdown_setup.Rmd), if you're just looking for a quick test. The steps are relatively simple:
 
-```{r pressure, echo=FALSE}
-plot(pressure)
+1. Save your .Rmd file into the same content folder where you'd put any other .md file for your Pelican blog
+2. Run your Pelican blog like you would normally. 
+
+That's it. rmd_reader will automatically execute your .Rmd file, produce the relevant graphics, and set up the html for your blog just like base Pelican would.
+
+Just to confirm everythng is working correctly, let's do some basic operations on the iris dataset.
+
+First let's see a simple summary of the data:
+```{r iris-table}
+summary(iris)
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+Let's finish with a simple k-means cluster analysis:
+```{r iris-plot, warning=F, message=F, error=F}
+library(broom)
+library(dplyr)
+library(ggplot2)
+
+iris_sub <- select(iris, x1 = Petal.Length, x2 = Petal.Width)
+
+kclusts <- data.frame(k=1:6) %>% group_by(k) %>% do(kclust=kmeans(iris_sub, .$k))
+clusters <- kclusts %>% group_by(k) %>% do(tidy(.$kclust[[1]]))
+assignments <- kclusts %>% group_by(k) %>% do(augment(.$kclust[[1]], iris_sub))
+clusterings <- kclusts %>% group_by(k) %>% do(glance(.$kclust[[1]]))
+
+ggplot(assignments, aes(x = x1, y = x2)) + 
+    facet_wrap(~ k) +
+    geom_point(aes(color=.cluster)) + 
+    geom_point(data=clusters, size=10, shape="x")
+```
+
+### Closing Remarks
+
+That's it! I've been meaning to get this set up for a while, and I'm pretty excited about it. Since most of my blog posts are R analyses, this is going to really simplify my workflow, which should make it much for me to actually finalize and post my results, something I've had issues with before. I'm also glad I'll be able to make greater use of R Markdown/Knitr, which will help me to organize my thoughts while analyzing as well as create reproducible research documents to share. I hope you find this useful as well!
